--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pykomodefi"
-version = "0.2.3"
+version = "0.2.4"
 description = "A wrapper for the Komodo DeFi Framework API"
 authors = ["smk <smk@komodoplatform.com>"]
 readme = "README.md"
@@ -25,7 +25,15 @@ include = [
 [tool.poetry.dependencies]
 python = "^3.8.1"
 requests = "^2.31.0"
+python-dotenv = "^1.0.0"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.7.0"
+pytest = "^7.2.1"
+pytest-cov = "^4.1.0"
+flake8 = "^4.0.1"
+pytest-flake8 = "^1.1.1"
 
 [build-system]
 requires = ["poetry-core"]
